--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: Nic Yantzi
 
     {% include welcome.html %}
     {% include about.html %}
+    {% include blogSample.html %}
     {% include resume.html %}
     {% include projects.html %}
     {% include connect.html %}
